//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

3rd November 2016 John Back
    Modified EvtFlatQ2 model to work for all B -> X lepton lepton modes, as
    well as adding an extra phase space factor to correct for the dip at low
    q^2, courtesy of Marcin Chrzaszcz & Thomas Blake (LHCb), which is enabled
    by using "FLATQ2 1" instead of just "FLATQ2" in the decay file.

13th October 2016 John Back
    Added the TauolaCurrentOption decfile keyword to select the hadronic 
    current in Tauola; default is the BaBar-tuned current option (int = 1).
    EvtParticles can store double attributes using the functions 
    setAttributeDouble(name, double) and getAttributeDouble(name), which can
    be useful for storing and retrieving amplitude weights, for example.
    The analogous EvtParticle integer attribute interface remains unchanged:
    setAttribute(name, int) and getAttribute(name).

13th September 2016 John Back
    Modified EvtTauolaEngine to use internal Tauola spin matrices for 
    tau pair events by temporarily setting the PDG id of the mother as a
    boson, keeping the same 4-momentum. The BaBar hadronic currents are now 
    used by default. Also added the ability to change some Tauola parameters 
    using the "Define" keyword in decay files. Added an example decay file
    illustrating the new features: validation/TauolaFiles/Btautau.dec

9th September 2016 Michal Kreps
    Reimplement code in EvtBTo3pi.F, EvtBTo3piMPP.F, EvtBTo3piP00.F and 
    EvtBToKpipi.F in C++ in order to remove dependence on Fortran compiler.
    With this, there is no internal Fortran code in EvtGen.

R01-06-00-------------------------------------------------------------------
1st June 2016 John Back
    New tag incorporating all changes below. Recommended external packages